<resources>
    <string name="app_name">Quiz App</string>

    <string name="question_header_1">Question 1</string>
    <string name="question_header_2">Question 2</string>
    <string name="question_header_3">Question 3</string>
    <string name="question_header_4">Question 4</string>
    <string name="question_header_5">Question 5</string>
    <string name="question_1">How many primitive data types exist in Java?</string>
    <string name="question_2">In Java, suppose we had a string variable called "animal" with the following value "panda". Using the String charAt() function only, what index do I use to return the third letter of animal?</string>
    <string name="question_3">Which of the following statements about Java are correct?</string>
    <string name="question_4">Is Java considered OOP (Object Oriented Programming)?</string>
    <string name="question_5">How many times does the counter variable i loop around the following code:\n\nint n=10;\nfor(int i=1; i&lt;n; i=i*2)\n \t\tSystem.out.println(\"Hello World\");</string>
    <string name="score">Score:</string>
    <string name="submit">Submit</string>
    <string name="option_1">5</string>
    <string name="option_2">3</string>
    <string name="option_3">8</string>
    <string name="option_4">Java is the official language in Android development.</string>
    <string name="option_5">Java can create classes called objects.</string>
    <string name="option_6">Java has the fastest compiling speed compared to C and Python. </string>
    <string name="option_7">It is good practice to keep your object\'s class variables public rather than using setters and getters.</string>
    <string name="option_8">Java is used as the server-side language for most back-end development projects, including those involving big data and Android development.</string>
    <string name="textFieldHint">Please type your answer here.</string>
    <string name="option_9">Yes</string>
    <string name="option_10">No</string>
    <string name="numFieldHint">Please enter a number here.</string>
</resources>